--- a/style.css
+++ b/style.css
@@ -101,7 +101,8 @@ button:hover {
 }
 
 .secondary-button:hover {
-  background-color: rgba(32, 39, 54, 0.5);
+  background-color: var(--highlight-colour);
+  color: var(--primary-colour);
 }
 
 .double-button {
