--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h4 {
 }
 
 h1 {
-  font-size: 64px;
+  font-size: 48px;
 }
 
 h2 {
@@ -122,6 +122,10 @@ button:hover {
   display: flex;
   align-items: center;
   padding: 0 24px;
+}
+
+.hero h1 {
+  font-size: 64px;
 }
 
 main {
@@ -230,6 +234,31 @@ main {
   border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
+.page-header {
+  margin: 120px 0 80px 0;
+  text-align: center;
+}
+
+.team-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 120px;
+}
+
+.wide-img {
+  max-width: 1080px;
+  margin-top: 40px;
+  overflow: hidden;
+}
+
+.wide-img img {
+  width: 100%;
+  max-height: 100%;
+  height: 500px;
+  object-fit: cover;
+}
+
 @media (max-width: 1079px) {
   .checker {
     flex-direction: column;
@@ -295,5 +324,14 @@ main {
 
   .checker-content {
     padding: 0;
+  }
+
+  .team-section p {
+    text-align: left;
+    margin-bottom: 0;
+  }
+
+  .wide-img {
+    margin-top: 24px;
   }
 }
