--- a/style.css
+++ b/style.css
@@ -18,25 +18,28 @@ h4 {
   font-family: var(--heading-font-family);
   text-transform: uppercase;
   line-height: 110%;
-  letter-spacing: 8%;
   margin-bottom: 24px;
 }
 
 h1 {
   font-size: 48px;
+  letter-spacing: 6px;
 }
 
 h2 {
   font-size: 36px;
+  letter-spacing: 4px;
 }
 
 h3 {
   font-size: 32px;
+  letter-spacing: 4px;
 }
 
 h4 {
   font-size: 20px;
   margin-bottom: 24px;
+  letter-spacing: 2.5px;
 }
 
 p {
@@ -126,6 +129,7 @@ button:hover {
 
 .hero h1 {
   font-size: 64px;
+  letter-spacing: 8px;
 }
 
 main {
