--- a/style.css
+++ b/style.css
@@ -51,6 +51,12 @@ p {
   color: rgba(255, 255, 255, 0.8);
 }
 
+a {
+  color: var(--highlight-colour);
+  font-weight: bold;
+  text-decoration: none;
+}
+
 img {
   border-radius: 3px;
 }
@@ -74,6 +80,15 @@ li {
   color: rgba(255, 255, 255, 0.8);
 }
 
+input {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 4px;
+  border: none;
+  padding: 12px 16px;
+  color: white;
+  width: 100%;
+  margin-bottom: 12px;
+}
 .p-large {
   font-size: 18px;
   font-weight: 300;
@@ -185,6 +200,67 @@ main {
 
 .checker-text {
   max-width: 500px;
+}
+
+.checker-form {
+  width: 500px;
+}
+
+.input-field {
+  width: 100%;
+}
+
+label {
+  margin-bottom: 8px;
+  font-family: var(--paragraph-font-family);
+  font-weight: 300;
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.input-two {
+  display: flex;
+  gap: 12px;
+}
+
+.form-button {
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  letter-spacing: 2px;
+  border-radius: 4px;
+  padding: 12px 16px;
+  background-color: white;
+  color: var(--primary-colour);
+  text-transform: uppercase;
+  transition: all 200ms ease-in-out;
+  border: none;
+  margin-top: 12px;
+}
+
+.form-button:hover {
+  background-color: var(--highlight-colour);
+}
+
+select {
+  color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.1);
+  font-size: 16px;
+  font-weight: 300;
+  appearance: none;
+  background-image: url("/images/arrow-down.svg");
+  background-repeat: no-repeat;
+  background-position: right 1rem center;
+  background-size: 1.2em;
+  width: 100%;
+  padding: 12px 16px;
+  border: none;
+  border-radius: 4px;
+  margin-bottom: 12px;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1) hue-rotate(180deg);
 }
 
 .checker h3 {
@@ -327,6 +403,10 @@ main {
 
   .checker-content {
     padding: 0;
+  }
+
+  .checker-form {
+    width: 100%;
   }
 }
 
