--- a/style.css
+++ b/style.css
@@ -75,14 +75,16 @@ nav.scrolled {
   backdrop-filter: blur(10px);
 }
 
-.nav-links {
+.nav-links,
+.footer-links {
   display: flex;
   flex-direction: row;
   gap: 24px;
   align-items: center;
 }
 
-.nav-links a {
+.nav-links a,
+.footer-links a {
   color: rgba(255, 255, 255, 0.5);
   font-weight: 300;
   text-transform: uppercase;
@@ -94,7 +96,8 @@ nav.scrolled {
   color: white;
 }
 
-.nav-links a:hover {
+.nav-links a:hover,
+.footer-links a:hover {
   color: white;
 }
 
@@ -420,6 +423,21 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  margin: 120px auto 40px auto;
+  font-size: 14px;
+}
+
+.social-icons {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
 }
 
 @media (max-width: 1079px) {
