--- a/style.css
+++ b/style.css
@@ -440,6 +440,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   gap: 24px;
 }
 
+.footer-text {
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.5);
+}
+
 @media (max-width: 1079px) {
   .checker {
     flex-direction: column;
